
AC_INIT(DESCRIPTION)

if test -n ${LIBMSQL_DIR}; then
    AC_CHECK_HEADER(${LIBMSQL_DIR}/msql.h, , LIBMSQL_DIR="")
fi
if test -z ${LIBMSQL_DIR}; then
    AC_CHECK_HEADER(/usr/local/Hughes/include/msql.h, LIBMSQL_DIR="/usr/local/Hughes")
fi

if test -z ${LIBMSQL_DIR} ; then
  echo "Cannot find msql.h. Set the value of the environment variable"
   echo "    LIBMSQL_DIR"
   echo "to point to where it can be found."
   exit 1;
  else
   echo "Located parser file ${LIBMSQL_DIR}/msql.h"
  fi

if test -n ${LIBMSQL_DIR}; then
	AC_CHECK_LIB(msql, msqlConnect, LIBDIR="${LIBMSQL_DIR}/lib", , [-L${LIBMSQL_DIR}/lib])
fi

if test -z ${LIBDIR} ; then
  echo "Cannot find libmsql"
  exit 1;
fi

PKG_LIBS="-lmsql -L${LIBDIR}"
PKG_CPPFLAGS="-I${LIBMSQL_DIR}/include"

AC_SUBST(PKG_LIBS)

AC_SUBST(PKG_CPPFLAGS)

AC_OUTPUT(src/Makevars)
